# gemini-cli-mcp-server

./: .gitignore  CONFIGURATION.md  FIX_SUMMARY.md  LLM_TO_LLM_COMMUNICATION.md  PROJECT_SUMMARY.md  README.md  README_AUTH.md  README_FIXED.md  SCHEMA_FIXES.md  USAGE.md  claude.md  debug_gemini.py  dog_poem.md  example_mcp_config.json  gemini-cli-mcp-system-prompt.md  pyproject.toml  requirements.txt  run_server.py  test_hybrid.py  test_improved.py  test_server.sh  test_simple.py  test_vibekit.py  validate_schemas.py
.gemini/: settings.json
archived/: LOGIC_ISSUES_REPORT.md  LOGIC_ISSUES_REPORT_V2.md  PERSISTENT_SESSION_ANALYSIS.md  QUICK_START.md  test_auth.py  test_comprehensive.py
prompts/: troubleshooting.md  usage_guide.md
src/: __init__.py  gemini_api_client.py  gemini_cli_wrapper.py  main.py
tests/: .env.example  PROJECT_SUMMARY.md  debug_detailed.py  debug_gemini_process.py  debug_wrapper.py  gemini_cli_wrapper.bak  gemini_cli_wrapper_pty.py  gemini_cli_wrapper_pty_fixed.py  test_ai_interaction.py  test_auth_debug.py  test_auth_handling.py  test_command_formats.py  test_current.py  test_improved_response.py  test_improved_wrapper.py  test_keyboard.py  test_keyboard_shortcuts.py  test_metacommands.py  test_new_persistent_session.py  test_persistent_session.py  test_persistent_session_debug.py  test_persistent_wrapper.py  test_pexpect_wrapper.py  test_pty_wrapper.py  test_server.sh  test_session.py  test_shell_commands.py  test_simple_commands.py
