[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemini-cli-mcp-server"
version = "0.1.0"
description = "MCP server that exposes Gemini CLI functionality"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "gemini", "ai", "cli", "server"]
authors = [
  {name = "AI Workspace", email = "workspace@example.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.2.0",
  "aiofiles>=23.0.0",
  "aiohttp>=3.9.0",
  "pydantic>=2.0.0",
  "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]

[project.scripts]
gemini-cli-mcp-server = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
